--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,12 +38,14 @@ textarea {
 
 .row {
   border-top: 1px solid white;
+  /* border-top: 10px solid white; */
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  /* border-bottom: 1px dashed #000000; */
 }
 
 .past {
